# megagdn-pto

./: .gitignore  README.md  REPRODUCTION_FINDINGS.md  REPROD_FINDINGS_0.18_round2.md  REPROD_FINDINGS_0.19.md  REPROD_FINDINGS_BF16_CAST.md  pyproject.toml  run_kimi_docker.sh
agent_temp/: a5_optim_plan.md
benchmarks/a5_sim/: gdn_sim.py  run_cannsim.sh  run_cannsim_entry.sh
benchmarks/eval_acc/: run_eval_suite.sh  run_lm_eval.py
benchmarks/kernel/: bench_bf16_megakernel.py  bench_gdn_kernels.py  bench_kda_vs_gdn.py  bench_pto_pipeline_latency.py
benchmarks/vllm_prefill/: benchmark_prefill.py  run_prefill_sweep.sh
blog/: meda_gdn_zh.md  mega_gdn_en.md  mega_gdn_zh.md
docker/: run_kimi_docker.sh
docs/: prebuilt_metadata_and_pto.md
kernels/pto/: _tmp_cast.cpp  cast_bf16_fp16.cpp  chunk_cumsum.cpp  chunk_h.cpp  chunk_h_kda.cpp  chunk_o.cpp  chunk_o_kda.cpp  gate_cumsum_kda.cpp  kkt_kda.cpp  mega_kernel.cpp  mega_kernel_kda.cpp  scaled_dot_kkt.cpp  tri_inverse.cpp  wy_fast.cpp  wy_kda.cpp
kernels/pto_a5/: PORT_STATUS.md  README.md  chunk_cumsum.cpp  chunk_h.cpp  chunk_o.cpp  mega_kernel.cpp  (+3 more)
megagdn_pto/: __init__.py  compile.py  fast_inverse.py  kda_kernel_libs.py  kda_mega_kernel.py  kernel_libs.py  mega_kernel.py
profiling/: profile_prefill.py
scripts/: download_weights.md  plot_results.py
tests/: kda_naive.py  ref_gdn.py  ref_kda.py  test_cast_bf16_fp16.py  test_e2e.py  test_kda_e2e.py  test_kda_single_kernels.py  test_single_kernels.py  utils.py
vllm_patch/: apply.py  apply_kda.py  chunk_gated_delta_rule.py  chunk_kda_pto.py  install_hook.py
(+127 files in other folders)
